# korea-stock-analyzer-mcp

./: .dockerignore  .gitignore  .npmignore  AGENTS.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_all_tools.py  test_kcc_glass.py  test_negative_per.py  test_pykrx.py  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: mcp.js  mcp.ts  requirements.txt  stock-data.js  stock-data.ts  stock_data.py
public/: index.html
src/: index.ts  server.ts
src/analyzers/: base-analyzer.ts  buffett.ts  fisher.ts  graham.ts  greenblatt.ts  index.ts  lynch.ts  templeton.ts
src/app/: deps.py  main.py  middleware.py  server.py
src/app/analysis/: ratios.py  risk.py  valuation.py  verification.py
src/app/services/: dart_client.py  price_client.py
src/app/tools/: discovery.py  financials.py  risk.py  valuation.py
src/config/: constants.ts
src/reports/: generator.ts
src/services/: data-fetcher.ts  financial-data.ts  index.ts  market-data.ts  python-executor.ts  supply-demand.ts
src/types/: analysis.types.ts  financial.types.ts  index.ts  market.types.ts
tests/: conftest.py  test_dart_cache_resilience.py  test_dart_errors.py  test_dart_parsing.py  test_discovery_tools.py  test_financials_tool.py  test_health.py  test_live_dart.py  test_live_price.py  test_market_cap_check.py  test_playmcp_compliance.py  test_rate_limit.py  test_ratios.py  test_risk.py  test_risk_tool.py  test_server.py  test_valuation.py  test_valuation_tool.py
tests/fixtures/: dart_fnltt_cfs_sample.json
(+6 files in other folders)
