[project]
name = "korea-stock-mcp"
version = "2.0.0"
description = "Conservative, data-honest Korean equity analysis MCP server (DART + KRX)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3,<4",
    "finance-datareader>=0.9.100",
    "httpx>=0.27",
    "cachetools>=5.3",
    "uvicorn>=0.30",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = ["live: hits real external APIs (deselected by default)"]
addopts = "-m 'not live'"

[tool.uv]
package = false
